--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ nav .logo {
   margin: -45px 0 12px 0;
 }
 
-.muhammad_yunus h3{
+.muhammad_yunus h3 {
   color: rgba(14, 14, 14, 0.8);
   font-size: 20px;
   font-weight: 600;
@@ -429,3 +429,88 @@ td {
   transition: all 0.5s;
 }
 /* recent news section end */
+
+/* donate today section start */
+.donate_today h2 {
+  color: rgb(14, 14, 14);
+  font-size: 40px;
+  font-weight: 700;
+  padding-bottom: 24px;
+  text-align: center;
+}
+
+.donate_today p {
+  color: rgba(14, 14, 14, 0.7);
+  font-size: 16px;
+  font-weight: 400;
+  padding-bottom: 32px;
+  line-height: 24px;
+  text-align: center;
+  padding: 0 88px;
+  padding-bottom: 32px;
+}
+
+.taka_cards {
+  display: flex;
+  justify-content: space-around;
+  gap: 24px;
+  padding: 0 104.5px;
+}
+
+.taka_cards .card {
+  color: rgba(14, 14, 14, 0.7);
+  font-size: 40px;
+  font-weight: 700;
+  padding: 40px;
+  border: 1px solid rgba(14, 14, 14, 0.15);
+  border-radius: 16px;
+  background-color: white;
+  padding-bottom: 32px;
+}
+
+.taka_cards .card:hover {
+  background-color: var(--MintFrost);
+  transition: all 0.5s;
+}
+
+.amount_taka {
+  text-align: center;
+  padding-bottom: 32px;
+}
+
+.amount_taka input {
+  width: 1030px;
+  text-align: center;
+  padding: 20px 40px;
+  margin-top: 32px;
+  border: none;
+}
+
+.amount_taka input::placeholder {
+  color: rgba(14, 14, 14, 0.3);
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.done_now_button {
+  display: block;
+  text-align: center;
+}
+
+.done_now {
+  color: white;
+  font-size: 16px;
+  font-weight: 600;
+  padding: 17px 34px;
+  margin-bottom: 80px;
+  background: var(--Green);
+  border-radius: 8px;
+  border: none;
+}
+
+.done_now:hover {
+  color: white;
+  background: black;
+  transition: al 0.5s;
+}
+/* donate today section end */
