--- a/style.css
+++ b/style.css
@@ -21,9 +21,17 @@
 /* website all colors end */
 
 body {
+  background-color: #f5f5f5;
+}
+
+header {
   max-width: 1280px;
   margin: 0 auto;
-  background-color: #f5f5f5;
+}
+
+main {
+  max-width: 1280px;
+  margin: 0 auto;
 }
 
 /* nav section start */
@@ -312,7 +320,7 @@ nav .logo {
 
 .questions_opinion {
   color: rgb(14, 14, 14);
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 600;
 }
 
@@ -328,12 +336,14 @@ table {
 }
 
 select {
-  width: 130px;
+  width: 135px;
   border-radius: 4px;
+  border: 1px solid rgb(14, 14, 14);
   background: rgb(198, 228, 214);
-  padding: 10px 14px;
+  padding: 10px 12px;
   font-size: 16px;
   font-weight: 500;
+  cursor: pointer;
 }
 
 select:hover {
@@ -585,10 +595,35 @@ td {
   transition: all 0.5s;
 }
 
-.subscribe_newsletter p{
+.subscribe_newsletter p {
   color: rgba(14, 14, 14, 0.7);
   font-size: 16px;
   font-weight: 400;
   text-align: center;
 }
 /* subscribe newsletter section end */
+
+/* footer section start */
+footer {
+  background: #ffffff;
+  padding: 50px 0;
+}
+
+footer .logo {
+  color: rgb(14, 14, 14);
+  font-size: 32px;
+  font-weight: 700;
+  text-align: center;
+  padding: 25px 0 32.5px 0;
+  margin-bottom: 32.5px;
+  border-bottom: 1px solid rgba(14, 14, 14, 0.1);
+}
+
+.social_icons {
+  text-align: center;
+}
+
+.social_icon {
+  padding-right: 23px;
+}
+/* footer section end */
