bangladesh2.0 website design completed

--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ td {
   color: white;
   font-size: 16px;
   font-weight: 600;
-  background: var(--Green);
+  background: #006A50;
   width: 16%;
   padding: 11px 20px;
   border-radius: 8px;
